fix layout of boxes, add active link state and fix width of hero

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,11 +67,11 @@ nav.-top {
     transition: transform 250ms ease-in-out;
     transform-origin:  100% 50%;
   }
-  &.-dark:after {
+  &.-dark:after, &.-dark.-active:after {
     border-bottom: solid 2px $color-primary;
   }
 }
-.link:hover:after { transform: scaleX(1); transform-origin:  0% 50%; }
+.link:hover:after, .link.-active:after { transform: scaleX(1); transform-origin:  0% 50%; }
 
 nav ul {
   flex-direction: row;
@@ -175,7 +175,8 @@ nav a {
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 20px;
-  flex: 1 1;
+  flex: 1 0 auto;
+  flex-basis: 45%;
   align-content: baseline;
 }
 /* #client:last-child {
