--- a/src/Styles/_brain.scss
+++ b/src/Styles/_brain.scss
@@ -6,6 +6,9 @@
   overflow-x: hidden;
   justify-content: center;
   z-index: 2;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto 40px;
 }
 
 .brain-left, .brain-right {
@@ -32,6 +35,7 @@
   margin: 0 auto;
   align-self: center;
   box-sizing: border-box;
+  max-width: 600px;
 }
 
 .brain-content {
