--- a/src/Styles/_info-section.scss
+++ b/src/Styles/_info-section.scss
@@ -34,6 +34,7 @@
     color: $color-primary;
     text-align: left;
     background-color: $color-white;
+    margin-bottom: 30px;
     /* border: 3px solid #0971AF; */
 }
 
